--- a/About-Us/about-us.html
+++ b/About-Us/about-us.html
@@ -15,7 +15,7 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../index.html"><img src="./images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="../hero-page/index.html"><img src="./images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
                 <li><a href="#">Products</a></li>
@@ -37,3 +37,88 @@
         </div>
         <img src="./images/c7c4586a501e0d457da1a0d7c485385e.jpeg" alt="">
     </div>
+    <div class="our-story">
+        <img src="./images/4427150d5e6ccdb9c797706fe839e4bf.jpeg" alt="">
+        <div id="our-story">
+            <h1>Our Story</h1>
+            <h2>Bio Growth was founded with a vision to transform the agricultural industry <br> through advanced research and development. We recognized the need for <br> more efficient, sustainable, and effective agricultural practices. Since our <br> inception, we have been committed to providing top-quality products and <br> services that help farmers achieve their goals.</h2>
+        </div>
+    </div>
+    <div class="why-biogrowth">
+        <h1>Why Choose Bio Growth?</h1>
+        <div id="why-choose-bio-growth">
+            <div class="why-1">
+                <h1>Innovation</h1>
+                <h2>We leverage the latest research and <br> technology to develop cutting-edge <br> agricultural solutions.</h2>
+            </div>
+            <div class="why-1">
+                <h1>Expertise</h1>
+                <h2>Our team of specialists provides <br> knowledgeable and practical advice <br> tailored to your specific needs.</h2>
+            </div>
+            <div class="why-1">
+                <h1>support</h1>
+                <h2> Our ongoing support ensures that you get <br> the most out of our products and services, <br> with continued assistance as needed.</h2>
+            </div>
+        </div>
+        </div>
+    <div class="our-committment">
+        <h1>Our Commitment to Sustainability</h1>
+        <h2>Sustainability is at the core of our operations. We are committed to promoting practices that protect <br> the environment, conserve resources, and ensure the long-term health of our ecosystems. By <br> integrating sustainable methods into our products and services, we help farmers reduce their <br> environmental impact and build resilient agricultural systems.
+        </h2>
+    </div>
+    <div class="newsletter">
+        <h1>Subscribe to our Newsletter</h1>
+        <div class="newsletter-user-info">
+            <input type="text" placeholder=" Your email address">
+            <button>join now</button>
+        </div>
+    </div>
+    <div class="connect">
+        <h1>Connect with us on</h1>
+        <div class="connect-with-us">
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+    </div>
+    <div class="footer">
+        <img src="./images/Bio_Growth_logo-removebg-preview.png" alt="">
+        <h5>Bio-Growth</h5>
+        <div class="footer-info-1">
+            <a href="">Company</a>
+            <a href="">Features</a>
+            <a href="">Contact Us</a>
+            <a href="">Stay up to date</a>
+        </div>
+    </div>
+     <div class="footer-info-2">
+            <div class="footer-info-2-link">
+                <a href="">Services</a>
+                <a href="">Consulting</a>
+                <a href="">Blog</a>
+                <a href="">Our company</a>
+            </div>
+            <div class="footer-info-2-link">
+                <a href="">Terms of Service</a>
+                <a href="">Privacy Policy</a>
+            </div>
+            <div class="footer-info-2-link-contact">
+                <a href="">Biogrowthagrotech@ <br>gmail.com</a>
+                <a href="">373-387-9039</a>
+                <a href="">41814 Kiehn Keys</a>
+            </div>
+            <div class="footer-info-2-link-newsletter">
+                <a href="">Subscribe to our newsletter</a>
+                <div id="subscribe">
+                    <input type="text" placeholder=" Join Our Newsletter" >
+                    <button class="subscribe-btn" ><span class="arrow">&#10140;</span></button> 
+                </div>
+            </div>
+        </div>
+        <div class="footer-detail">
+            Copyright © 2024 Bio-growth Agrotech. All rights reserved.
+        </div> 
+        <script src="about-us.js"></script>
+    </body> 
+
