--- a/hero-page/index.html
+++ b/hero-page/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#our-products">Products</a></li>
                 <li><a href="#consulting">Consulting</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="#">Company</a></li>    
+                <li><a href="../About-Us/about-us.html">Company</a></li>    
             </ul>
            <button id="btn-2" onclick="login()">Log in</button>
            <button id="btn-1" onclick="signup()">Sign Up</button>
@@ -243,12 +243,25 @@
         </div>
         <button id="our-testimonies">Frequently asked questions</button>
         <div class="FAQ">
-            <button>What is Biogrowth AgroTech?</button>
-            <button>What types of subscription plans do you offer?</button>
-            <button>How do I sign up for a subscription plan?</button>
-            <button>Can I cancel or change my subscription plan?</button>
-            <button>What kind of support do you offer to subscribers?</button>
-            <button>Are there any discounts available for annual subscriptions?</button>
+            <button id="faq-1">What is Biogrowth AgroTech?
+                <h5>Biogrowth is an agricultral company specialixing in cutting-edge for plant and animal feed. Our team of experts <br>
+                    develops innovative formulas designed to optimize nutrtion and growth for crops and livestock. We also offer consulting services to help farmers acheive maximum efficiency and profitability in thier operations.</h5>
+            </button>
+
+            <button id="faq-1">What types of subscription plans do you offer?
+                <h5>We offer three subscription plans: Basic, Standard, and premium. Each plan provides access to different levels of feed products, consultaion services, an additional benefits. You can choose the plan that best suit your farm's needs and budget</h5>
+            </button>
+    
+            <button id="faq-1">How do I sign up for a subscription plan?
+                <h5>signing up for a subscription pla in easy! simply visit our website and navigate to the subscription plans section. choose the plan that fits your needs, select your payment option (monthly, or anually),and follow the prompts to complete the signup process.</h5>
+            </button>
+        
+            <button id="faq-1">Can I cancel or change my subscription plan?
+                <h5>Yes, you can cancel or change your subscription plan at any time. simply login to your account and navigate to the sucbsription section. From there, you can manage your subscrption settings, including cancellation, upgrades, or downgrades.  </h5>
+            </button>
+
+            <!-- <button id="faq-5">What kind of support do you offer to subscribers?</button>
+            <button id="faq-6">Are there any discounts available for annual subscriptions?</button> -->
         </div>
         <button id="our-products">Newsletter</button> 
     </div>
