--- a/pages/product-description.html
+++ b/pages/product-description.html
@@ -48,7 +48,7 @@
                     <span id="numberDisplay">0</span>
                     <button id="increaseButton">+</button>
                 </div>
-                <button class="purchase-button" >Purchase</button>
+                <button id="purchase-button" >Purchase</button>
             </div>
         </div>
         <div class="sub-nav">
@@ -66,9 +66,9 @@
         and vibrant blooms. With easy application and long-lasting effects, give your plants the nutrition <br> 
         they need to thrive all season long.</p>
     
-        <div class="customer-review">
-            <p id="customer-review">Customer review</p>
-            <div class="customer-review-info">
+        <div class="my-customer-review">
+            <p id="my-customer-review">Customer review</p>
+            <div class="my-customer-review-info">
                <div class="review-1">
                 <p>"I've been using BioGrow fertilizer for a few months now, and I'm amazed at the results! <br>
                     My plants are healthier, greener, and producing more flowers than ever before. Highly <br>
