--- a/pages/card-details.html
+++ b/pages/card-details.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio-Growth Agro Tech</title>
-    <link rel="stylesheet" href="../css/pages/logout.css">
+    <link rel="stylesheet" href="../css/pages/add-address.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Are you sure you want 
-        Log out ?</p>
+    <p>Add Card Details</p>
+
+    <h5>For a smooth and hassle-free purchasing <br> experience, please add your card details. <br> This will make your future orders faster and <br> more convenient.
+    </h5>
     
         <div class="logout-btn">
-            <button id="btn-1">logout</button>
-            <button id="btn-2">cancel</button>
+            <button id="btn-1">Add card </button>
+            <button id="btn-2">Dismiss</button>
         </div>
 </body>
