--- a/About-Us/about-us.html
+++ b/About-Us/about-us.html
@@ -66,6 +66,10 @@
         <h2>Sustainability is at the core of our operations. We are committed to promoting practices that protect <br> the environment, conserve resources, and ensure the long-term health of our ecosystems. By <br> integrating sustainable methods into our products and services, we help farmers reduce their <br> environmental impact and build resilient agricultural systems.
         </h2>
     </div>
+    <div class="Join-us">
+        <h1>Join us on our Journey</h1>
+        <h2>At Bio Growth, we believe in the power of innovation and collaboration to <br> drive positive change in agriculture. Join us on our journey to create a <br> more sustainable, productive, and profitable future for farming. Contact us <br> today to learn more about our products, services, and how we can help <br> you achieve your agricultural goals. <br></h2>
+    </div>
     <div class="newsletter">
         <h1>Subscribe to our Newsletter</h1>
         <div class="newsletter-user-info">
