--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio-Growth Agro Tech</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
@@ -16,13 +16,13 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="index.html"><img src="./images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#our-products">Products</a></li>
-                <li><a href="#consulting">Consulting</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="../About-Us/about-us.html">Company</a></li>    
+                <li><a href="./pages/product.html">Products</a></li>
+                <li><a href="./pages/consulting-page.html">Consulting</a></li>
+                <li><a href="./pages/blog-page.html">Blog</a></li>
+                <li><a href="./pages/about-us.html">Company</a></li>    
             </ul>
            <button id="btn-2" onclick="login()">Log in</button>
            <button id="btn-1" onclick="signup()">Sign Up</button>
@@ -32,7 +32,7 @@
             <h3>Discover our cutting-edge formulas that optimize nutrition and <br> growth for your crops and livestock.</h3>
             <div class="hero-button">
                 <button id="hero-btn-1">Learn More</button>
-                <button id="hero-btn-2">Sign Up</button>
+                <a href="./pages/signup.html"><button id="hero-btn-2">Sign Up</button></a>
             </div>
         </div>
     </div>
@@ -62,7 +62,7 @@
             <div id="At-Biotech">
                 <h3>At Biotech AgroTech, we're pioneers in agricultural innovation, dedicated <br>to revolutionizing farming with cutting-edge solutions. From precision <br>farming tools to genetically optimized crops, we empower farmers <br> worldwide for a greener, more prosperous future.
                 </h3>
-                <button>About Us <span class="arrow">&#10140;</span></button>
+                <a href="/pages/about-us.html"><button>About Us <span class="arrow">&#10140;</span></button></a>
             </div>
         </div>
         <div class="subscription-plan">
@@ -120,8 +120,8 @@
                     At Biotech AgroTech, we provide advanced feed solutions for both <br> crops and livestock. From specialized fertilizers enriched with  <br>micronutrients to high-quality feed additives, our products maximize <br> growth and health. Trust Biotech AgroTech for optimal farm nutrition.
                 </h5>
                 <div class="see-products">
-                    <button>Sign Up</button>
-                    <a href="">See Products</a>
+                    <a href="./pages/signup.html"><button>Sign Up</button></a>
+                    <a href="./pages/product.html">See Products</a>
                 </div>
             </div>
             <div class="frame-4-img">
@@ -181,8 +181,8 @@
                 </div>
             </div>
             <div class="consulting-buttons">
-                <button class="learn-btn" >Learn more <span class="arrow">&#10140;</span></button>
-                <button>sign Up</button>
+                <a href="./pages/consulting-page.html"><button class="learn-btn" >Learn more <span class="arrow">&#10140;</span></button></a>
+                <a href="./pages/signup.html"><button>sign Up</button></a>
             </div>
         </div>
         <button id="our-products">Blog</button>
@@ -191,19 +191,19 @@
                 <img src="images/blog-1.jpeg" alt="">
                 <h1>Unlocking Precision <br> Agriculture: A Farmer's Guide</h1>
                 <h5>Discover how innovative technologies like <br> GPS-guided equipment and remote sensing <br> are revolutionizing farming.</h5>
-                <button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button>
+                <a href="./pages/blog1.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
             </div>
             <div class="blog-1">
                 <img src="images/blog-2.jpeg" alt="">
                 <h1>Soil Health: Key Practices for <br> Sustainable Farming</h1>
                 <h5>Learn about soil testing, nutrient <br> management, and cover cropping for <br> healthier soils and better yields</h5>
-                <button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button>
+                <a href="./pages/blog2.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
             </div>
             <div class="blog-1">
                 <img src="images/blog-3.jpeg" alt="">
                 <h1>Integrated Pest Management: <br> A Holistic Approach</h1>
                 <h5>Explore strategies like biological controls and <br> targeted pesticide applications for effective <br> pest management.</h5>
-                <button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button>
+                <a href="./pages/blog3.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
             </div>
         </div>
         <button id="our-testimonies">What Our Customers Say</button>
