--- a/pages/consulting-page.html
+++ b/pages/consulting-page.html
@@ -15,19 +15,31 @@
     <div>.
     </div>
     <div id="nav-bar" >
-        <a href="../hero-page/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
         <h5>Bio-Growth</h5>
         <ul>
-            <li><a href="#our-products">Products</a></li>
-            <li><a href="#consulting">Consulting</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="../About-Us/about-us.html">Company</a></li>    
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./consulting-page.html">Consulting</a></li>
+            <li><a href="./blog-page.html">Blog</a></li>
+            <li><a href="./about-us.html">Company</a></li>    
+        </ul>
+       <button id="btn-2" onclick="login()">Log in</button>
+       <button id="btn-1" onclick="signup()">Sign Up</button>
+    </div>
+    <!-- <div id="nav-bar" >
+        <a href="../index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+        <h5>Bio-Growth</h5>
+        <ul>
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./consulting-page.html">Consulting</a></li>
+            <li><a href="./blog-page.html">Blog</a></li>
+            <li><a href="./about-us.html">Company</a></li>    
         </ul>
         <div class="user-info">
             <p>cart</p>
             <i>7</i>
             <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -39,7 +51,7 @@
         <div id="At-Biotech">
             <h3>At Biotech AgroTech, we're pioneers in agricultural innovation, dedicated <br>to revolutionizing farming with cutting-edge solutions. From precision <br>farming tools to genetically optimized crops, we empower farmers <br> worldwide for a greener, more prosperous future.
             </h3>
-            <button>Book a session <span class="arrow">&#10140;</span></button>
+            <button>Book a session </button>
         </div>
     </div>
     <div id="consulting">
@@ -106,10 +118,10 @@
     <div class="connect">
         <h1>Connect with us on</h1>
         <div class="connect-with-us">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://www.facebook.com"  target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="http://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </div>
 </div>
@@ -151,3 +163,4 @@
         Copyright © 2024 Bio-growth Agrotech. All rights reserved.
     </div> 
 </div>
+<script src="/js/product.js"></script>
