--- a/pages/elite-plan.html
+++ b/pages/elite-plan.html
@@ -16,28 +16,41 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#our-products">Products</a></li>
-                <li><a href="#consulting">Consulting</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="../About-Us/about-us.html">Company</a></li>    
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>    
+            </ul>
+           <button id="btn-2" onclick="login()">Log in</button>
+           <button id="btn-1" onclick="signup()">Sign Up</button>
+        </div>
+    </div>
+        <!-- <div id="nav-bar" >
+            <a href="/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <h5>Bio-Growth</h5>
+            <ul>
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>   
             </ul>
             <div class="user-info">
                 <p>cart</p>
                 <i>0</i>
                 <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
     <p id="first-info" >Grow with confidence</p>
     <nav>
         <ul>
-            <li>All</li>
-            <li>Growth plan</li>
-            <li>Pro plan</li>
-            <li id="first-element" >Elite plan</li>
+            <a href="./product.html"><li >All</li></a>
+            <a href="./growth-plan.html"><li>Growth plan</li></a>
+            <a href="./pro-plan.html"><li>Pro plan</li></a>
+            <a href="./elite-plan.html"><li id="first-element">Elite plan</li></a>
         </ul>
     </nav>
 
@@ -223,4 +236,6 @@
         <div class="footer-detail">
             Copyright © 2024 Bio-growth Agrotech. All rights reserved.
         </div> 
+    </body>
+    <script src="/js/product.js"></script>
     
