--- a/pages/growth-plan.html
+++ b/pages/growth-plan.html
@@ -16,28 +16,27 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#our-products">Products</a></li>
-                <li><a href="#consulting">Consulting</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="../About-Us/about-us.html">Company</a></li>    
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>    
             </ul>
-            <div class="user-info">
-                <p>cart</p>
-                <i>0</i>
-                <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-            </div>
+           <button id="btn-2" onclick="login()">Log in</button>
+           <button id="btn-1" onclick="signup()">Sign Up</button>
+        </div>
+    </div>
         </div>
     </div>
     <p id="first-info" >Grow with confidence</p>
     <nav>
         <ul>
-                <li>All</li>
-                <li id="first-element">Growth plan</li>
-                <li>Pro plan</li>
-                <li>Elite plan</li> 
+            <a href="./product.html"><li >All</li></a>
+            <a href="./growth-plan.html"><li id="first-element">Growth plan</li></a>
+            <a href="./pro-plan.html"><li>Pro plan</li></a>
+            <a href="./elite-plan.html"><li>Elite plan</li></a>
         </ul>
     </nav>
     <!-- <div class="frame-4">
@@ -60,17 +59,17 @@
         <div class="product-1">
             <p>Bio-Pet small <br> Animal Food</p>
             <img src="../assets/images/1a32713a0bd5f6b84abfe47f510bfb98.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Root<br> stimulant</p>
             <img src="../assets/images/bio-root stimulant.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed premium <br>Livestock Feed</p>
             <img src="../assets/images/biofeed livestock premium.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
     <!-- <div class="frame-4">
@@ -92,17 +91,17 @@
         <div class="product-1">
             <p>Bio-Guard Plant <br> Pest Repellant</p>
             <img src="../assets/images/biofeed pest reppelant.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed<br> All-purpose Plant Food</p>
             <img src="../assets/images/bio-boost livestock.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed poultry <br>Feed supplement</p>
             <img src="../assets/images/bio-grow all purpose.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
     <!-- <div class="frame-4">
@@ -124,24 +123,24 @@
         <div class="product-1">
             <p>Bio-Guard Livestock <br> Insect Repellent</p>
             <img src="../assets/images/insect repellant.png" alt="">
-            <i>+ Add to your cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Boost <br> Organic Compost</p>
             <img src="../assets/images/organic compost.png" alt="">
-            <i>+ Add to your cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Grow <br> PH Adjuster</p>
             <img src="../assets/images/PH adjuster.png" alt="">
-            <i>+ Add to your cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
         <div class="growth-plan-product">
         <div class="product-1">
             <p>Bio-Shield <br> Livestock Sunscreen</p>
             <img src="../assets/images/livestock sunscreen.png" alt="">
-            <i>+ Add to your cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
     <div class="footer">
@@ -181,4 +180,6 @@
         <div class="footer-detail">
             Copyright © 2024 Bio-growth Agrotech. All rights reserved.
         </div> 
+    </body>
+    <script src="/js/product.js"></script>
     
