--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio-Growth Agro Tech</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/css/pages/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
@@ -15,13 +15,13 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="./images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Consulting</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Company</a></li>    
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>       
             </ul>
            <button id="btn-2" onclick="login()" >Log in</button>
            <button id="btn-1" onclick="signup()">Sign Up</button>
@@ -52,10 +52,10 @@
                     </div>
                 </div>
                 <button>continue</button><br>
-                <h4>Don't Have an Account ? <a href="./signup.html">sign up</a></h4>
+                <h4>Don't Have an Account ? <a href="/pages/signup.html">sign up</a></h4>
             </form>
             <div class="signup-image">
-                <img src="./images/login-image.jpeg" alt="">
+                <img src="/assets/images/login-image.jpeg" alt="">
             </div>
             
         </div>
@@ -63,6 +63,6 @@
 
         </div>
     </div>
-    <script src="login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
