--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio-Growth Agro Tech</title>
-    <link rel="stylesheet" href="about-us.css">
+    <link rel="stylesheet" href="../css/pages/about-us.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
@@ -15,13 +15,13 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="./images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="../index.html"><img src="../images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Consulting</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Company</a></li>    
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>    
             </ul>
            <button id="btn-2" onclick="login()">Log in</button>
            <button id="btn-1" onclick="signup()">Sign Up</button>
@@ -35,10 +35,10 @@
             <h1>Our Team</h1>
             <h2>Our team of experts includes agronomists, soil scientists, agricultural <br> engineers, and nutrition specialists. Each member brings a wealth of <br> knowledge and experience to the table, allowing us to offer comprehensive <br>solutions tailored to the unique needs of every farm. We are passionate about <br>what we do and dedicated to supporting the agricultural community.</h2>
         </div>
-        <img src="./images/c7c4586a501e0d457da1a0d7c485385e.jpeg" alt="">
+        <img src="../assets/images/about-us1.jpeg" alt="">
     </div>
     <div class="our-story">
-        <img src="./images/4427150d5e6ccdb9c797706fe839e4bf.jpeg" alt="">
+        <img src="../assets/images/about-us2.jpeg" alt="">
         <div id="our-story">
             <h1>Our Story</h1>
             <h2>Bio Growth was founded with a vision to transform the agricultural industry <br> through advanced research and development. We recognized the need for <br> more efficient, sustainable, and effective agricultural practices. Since our <br> inception, we have been committed to providing top-quality products and <br> services that help farmers achieve their goals.</h2>
@@ -80,17 +80,17 @@
     <div class="connect">
         <h1>Connect with us on</h1>
         <div class="connect-with-us">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://www.facebook.com"  target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="http://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </div>
     <div class="footer">
-        <img src="./images/Bio_Growth_logo-removebg-preview.png" alt="">
+        <img src="../images/Bio_Growth_logo-removebg-preview.png" alt="">
         <h5>Bio-Growth</h5>
         <div class="footer-info-1">
-            <a href="">Company</a>
+            <a href="./about-us.html">Company</a>
             <a href="">Features</a>
             <a href="">Contact Us</a>
             <a href="">Stay up to date</a>
@@ -99,16 +99,16 @@
      <div class="footer-info-2">
             <div class="footer-info-2-link">
                 <a href="">Services</a>
-                <a href="">Consulting</a>
-                <a href="">Blog</a>
-                <a href="">Our company</a>
+                <a href="./consulting-page.html">Consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./blog-page.html">Our company</a>
             </div>
             <div class="footer-info-2-link">
                 <a href="">Terms of Service</a>
                 <a href="">Privacy Policy</a>
             </div>
             <div class="footer-info-2-link-contact">
-                <a href="">Biogrowthagrotech@ <br>gmail.com</a>
+                <a href="http://www.gmail.com" target="_blank">Biogrowthagrotech@<br>gmail.com</a>
                 <a href="">373-387-9039</a>
                 <a href="">41814 Kiehn Keys</a>
             </div>
@@ -123,6 +123,6 @@
         <div class="footer-detail">
             Copyright © 2024 Bio-growth Agrotech. All rights reserved.
         </div> 
-        <script src="about-us.js"></script>
+        <script src="../js/about-us.js"></script>
     </body> 
 
