--- a/pages/product.html
+++ b/pages/product.html
@@ -16,28 +16,25 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
             <h5>Bio-Growth</h5>
             <ul>
-                <li><a href="#our-products">Products</a></li>
-                <li><a href="#consulting">Consulting</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="../About-Us/about-us.html">Company</a></li>    
+                <li><a href="/pages/product.html">Products</a></li>
+                <li><a href="./consulting-page.html">Consulting</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
+                <li><a href="./about-us.html">Company</a></li>    
             </ul>
-            <div class="user-info">
-                <p>cart</p>
-                <i>0</i>
-                <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-            </div>
+           <button id="btn-2" onclick="login()">Log in</button>
+           <button id="btn-1" onclick="signup()">Sign Up</button>
         </div>
     </div>
     <p id="first-info" >Grow with confidence</p>
     <nav>
         <ul>
-            <li id="first-element">All</li>
-            <li>Growth plan</li>
-            <li>Pro plan</li>
-            <li>Elite plan</li>
+            <a href="#"><li id="first-element">All</li></a>
+            <a href="./growth-plan.html"><li>Growth plan</li></a>
+            <a href="./pro-plan.html"><li>Pro plan</li></a>
+            <a href="./elite-plan.html"><li>Elite plan</li></a>
         </ul>
     </nav>
     <div class="frame-4">
@@ -60,17 +57,17 @@
         <div class="product-1">
             <p>Bio-Pet small <br> Animal Food</p>
             <img src="../assets/images/1a32713a0bd5f6b84abfe47f510bfb98.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Root<br> stimulant</p>
             <img src="../assets/images/baf53afd0a0f385b051a752496b78055.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed premium <br>Livestock Feed</p>
             <img src="../assets/images/e3b3362a67bfc9e9f2676a26ac8e2b1d.png" alt="">
-            <i>+ Add to cart</i>
+            <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
     <div class="frame-4">
@@ -174,4 +171,5 @@
         <div class="footer-detail">
             Copyright © 2024 Bio-growth Agrotech. All rights reserved.
         </div> 
-    
+    </body>
+    <script src="/js/product.js"></script>
